--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,7 @@ spring.shardingsphere.datasource.ds0.jdbc-url=jdbc:mysql://localhost:3306/demo?a
 spring.shardingsphere.datasource.ds0.username=root
 spring.shardingsphere.datasource.ds0.password=12345678
 
-# 分表策略,配置actual-data-nodes会参数第一张表，动态分区会自动创建之后的所有表（每天定时创建），表名称的日期格式要与实际分区格式保持一致,
-# actual-data-nodes配置规则是是固定写法， 数据源名.逻辑表名_$->{[最小分区时间]}
+# 分表策略
 spring.shardingsphere.sharding.tables.day_partition_table.actual-data-nodes=ds0.day_partition_table_$->{20210101..20210111}
 # 指定分区字段
 spring.shardingsphere.sharding.tables.day_partition_table.table-strategy.standard.sharding-column=partitionDate
